added the Exam entity and others

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,8 @@ spring:
     init:
       mode: always
       continue-on-error: false
+
+#logging:
+#  level:
+#    org:
+#      springframework=DEBUG:
