added the Entities and the Services

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
     url: jdbc:mysql://localhost:3306/exam_management?createDatabaseIfNotExist=true
     username: root
     password:
-
+  mvc:
+    view:
+      prefix: /WEB-INF/jsp/view/
+      suffix: .jsp
   jpa:
     database-platform: org.hibernate.dialect.MySQL8InnoDBDialect
     generate-ddl: true
@@ -22,7 +25,11 @@ spring:
       mode: always
       continue-on-error: false
 
-#logging:
-#  level:
-#    org:
-#      springframework=DEBUG:
+logging:
+  level:
+    org:
+      springframework: INFO
+      hibernate:
+        SQL: DEBUG
+        _: ERROR
+    com: ERROR
