--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring:
     init:
       mode: always
       continue-on-error: false
+  main:
+    allow-circular-references: true
 
 logging:
   level:
